[Markdown] [Web/HTML] Fix heading-style notes (#9152)
* HTML docs: fix notes that use heading style

* Fixups

--- a/files/en-us/web/html/element/a/index.html
+++ b/files/en-us/web/html/element/a/index.html
@@ -102,8 +102,7 @@ browser-compat: html.elements.a
  </ul>
 
  <div class="notecard note">
- <h4>Note</h4>
- <p>Setting <code>target="_blank"</code> on <code>&lt;a&gt;</code> elements implicitly provides the same <code>rel</code> behavior as setting <code><a href="/en-US/docs/Web/HTML/Link_types/noopener">rel="noopener"</a></code> which does not set <code>window.opener</code>. See <a href="#browser_compatibility">browser compatibility</a> for support status.</p>
+ <p><strong>Note:</strong> Setting <code>target="_blank"</code> on <code>&lt;a&gt;</code> elements implicitly provides the same <code>rel</code> behavior as setting <code><a href="/en-US/docs/Web/HTML/Link_types/noopener">rel="noopener"</a></code> which does not set <code>window.opener</code>. See <a href="#browser_compatibility">browser compatibility</a> for support status.</p>
  </div>
  </dd>
  <dt>{{HTMLAttrDef("type")}}</dt>
@@ -116,8 +115,7 @@ browser-compat: html.elements.a
  <dt>{{HTMLAttrDef("charset")}}{{Deprecated_Inline}}</dt>
  <dd>Hinted at the {{Glossary("character encoding")}} of the linked URL.
  <div class="notecard note">
- <h4>Note</h4>
- <p>This attribute is deprecated and <strong>should not be used by authors</strong>. Use the HTTP {{HTTPHeader("Content-Type")}} header on the linked URL.</p>
+ <p><strong>Note:</strong> This attribute is deprecated and <strong>should not be used by authors</strong>. Use the HTTP {{HTTPHeader("Content-Type")}} header on the linked URL.</p>
  </div>
  </dd>
  <dt>{{HTMLAttrDef("coords")}}{{Deprecated_Inline}}</dt>
@@ -125,8 +123,7 @@ browser-compat: html.elements.a
  <dt>{{HTMLAttrDef("name")}}{{Deprecated_Inline}}</dt>
  <dd>Was required to define a possible target location in a page. In HTML 4.01, <code>id</code> and <code>name</code> could both be used on <code>&lt;a&gt;</code>, as long as they had identical values.
  <div class="notecard note">
- <h4>Note</h4>
- <p>Use the global attribute {{HTMLAttrxRef("id")}} instead.</p>
+ <p><strong>Note:</strong> Use the global attribute {{HTMLAttrxRef("id")}} instead.</p>
  </div>
  </dd>
  <dt>{{HTMLAttrDef("rev")}}{{Deprecated_Inline}}</dt>
@@ -134,8 +131,7 @@ browser-compat: html.elements.a
  <dt>{{HTMLAttrDef("shape")}}{{Deprecated_Inline}}</dt>
  <dd>The shape of the hyperlink’s region in an image map.
  <div class="notecard note">
- <h4>Note</h4>
- <p>Use the {{HTMLElement("area")}} element for image maps instead.</p>
+ <p><strong>Note:</strong> Use the {{HTMLElement("area")}} element for image maps instead.</p>
  </div>
  </dd>
 </dl>
@@ -237,8 +233,7 @@ browser-compat: html.elements.a
 </pre>
 
 <div class="notecard note">
-<h4>Note</h4>
-<p>You can use <code>href="#top"</code> or the empty fragment (<code>href="#"</code>) to link to the top of the current page, <a href="https://html.spec.whatwg.org/multipage/browsing-the-web.html#scroll-to-the-fragment-identifier">as defined in the HTML specification</a>.</p>
+<p><strong>Note:</strong> You can use <code>href="#top"</code> or the empty fragment (<code>href="#"</code>) to link to the top of the current page, <a href="https://html.spec.whatwg.org/multipage/browsing-the-web.html#scroll-to-the-fragment-identifier">as defined in the HTML specification</a>.</p>
 </div>
 
 <h3 id="Linking_to_an_email_address">Linking to an email address</h3>
