[Markdown] [Web/HTML] Add "Note:" prefix (#9151)
* In the HTML docs: add prefix to notes that need it

* Fix a few stragglers

* Fix a few more stragglers

* Fix one more straggler

Co-authored-by: Jean-Yves Perrier <jypenator@gmail.com>

--- a/files/en-us/web/html/element/input/date/index.html
+++ b/files/en-us/web/html/element/input/date/index.html
@@ -60,7 +60,7 @@ browser-compat: html.elements.input.input-date
 <p>{{EmbedLiveSample('Value', 600, 40)}}</p>
 
 <div class="notecard note">
-<p><strong>Note:</strong> The displayed date format will differ from the actual <code>value</code>. The displayed date is formatted based on the locale of the user's browser, but the parsed <code>value</code> is always formatted <code>yyyy-mm-dd</code>.</p>
+<p><strong>Note:</strong> The displayed date format will differ from the actual <code>value</code> — the displayed date is formatted <em>based on the locale of the user's browser</em>, but the parsed <code>value</code> is always formatted <code>yyyy-mm-dd</code>.</p>
 </div>
 
 <p>You can get and set the date value in JavaScript with the {{domxref("HTMLInputElement")}} <code>value</code> and <code>valueAsNumber</code> properties. For example:</p>
@@ -101,7 +101,7 @@ console.log(dateControl.valueAsNumber); // prints 1496275200000, a JavaScript ti
 <p>For <code>date</code> inputs, the value of <code>step</code> is given in days; and is treated as a number of milliseconds equal to 86,400,000 times the <code>step</code> value (the underlying numeric value is in milliseconds). The default value of <code>step</code> is 1, indicating 1 day.</p>
 
 <div class="notecard note">
-<p>Specifying <code>any</code> as the value for <code>step</code> has the same effect as <code>1</code> for <code>date</code> inputs.</p>
+<p><strong>Note:</strong> Specifying <code>any</code> as the value for <code>step</code> has the same effect as <code>1</code> for <code>date</code> inputs.</p>
 </div>
 
 <h2 id="Using_date_inputs">Using date inputs</h2>
@@ -111,7 +111,7 @@ console.log(dateControl.valueAsNumber); // prints 1496275200000, a JavaScript ti
 <p>In this section, we'll look at basic and then more complex uses of <code>&lt;input type="date"&gt;</code>, and offer advice on mitigating the browser support issue later (see {{anch("Handling browser support")}}).</p>
 
 <div class="notecard note">
-<p>Hopefully, over time browser support will become ubiquitous, and this problem will fade away.</p>
+<p><strong>Note:</strong> Hopefully, over time browser support will become ubiquitous, and this problem will fade away.</p>
 </div>
 
 <h3 id="Basic_uses_of_date">Basic uses of date</h3>
