--- a/files/en-us/web/html/element/noframes/index.html
+++ b/files/en-us/web/html/element/noframes/index.html
@@ -21,7 +21,7 @@ browser-compat: html.elements.noframes
 <p><code>&lt;noframes&gt;</code> can be used to present a message explaining that the user's browser doesn't support frames, but ideally should be used to present an alternate form of the site that doesn't use frames but still offers the same or similar functionality.</p>
 
 <div class="note">
-<p>In HTML 5 and later, <code>&lt;noframes&gt;</code> is obsolete and shouldn't be used, since the {{HTMLElement("frame")}} and {{HTMLElement("frameset")}} elements are also obsolete. When frames are needed at all, they should be presented using the {{HTMLElement("iframe")}} element.</p>
+<p><strong>Note:</strong> This element is obsolete and shouldn't be used, since the {{HTMLElement("frame")}} and {{HTMLElement("frameset")}} elements are also obsolete. When frames are needed at all, they should be presented using the {{HTMLElement("iframe")}} element.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
