add note about encoding

--- a/files/en-us/web/html/element/pre/index.html
+++ b/files/en-us/web/html/element/pre/index.html
@@ -78,6 +78,8 @@ body {
 
 <p>{{EmbedLiveSample("Example")}}</p>
 
+<div class="notecard note"><strong>Note:</strong> If you have HTML tags in the content you want to display literally, rather than parsed as HTML, you will need to encode the angle brackets. For example <code>&amp;lt;p&amp;gt;</code> to display <code>&lt;p&gt;</code>.</div>
+
 <h2 id="Accessibility_concerns">Accessibility concerns</h2>
 
 <p>It is important to provide an alternate description for any images or diagrams created using preformatted text. The alternate description should clearly and concisely describe the image or diagram's content.</p>
