Fixes #9149 - Add a sufficiently detailed note about encoding

--- a/files/en-us/web/html/element/pre/index.html
+++ b/files/en-us/web/html/element/pre/index.html
@@ -78,6 +78,10 @@ body {
 
 <p>{{EmbedLiveSample("Example")}}</p>
 
+<div class="notecard note"><strong>Note:</strong> Unless they should be parsed as HTML, reserved characters such as &lt; &gt; &apos; &#8217; &quot; &amp; need to be escaped via their
+<a href="https://dev.w3.org/html5/html-author/charref">corresponding HTML entities</a> within the &lt;pre&gt; tag. For example <code>&amp;lt;p&amp;gt;</code> to display <code>&lt;p&gt;</code>.</div>
+
+
 <h2 id="Accessibility_concerns">Accessibility concerns</h2>
 
 <p>It is important to provide an alternate description for any images or diagrams created using preformatted text. The alternate description should clearly and concisely describe the image or diagram's content.</p>
