--- a/files/en-us/learn/common_questions/pages_sites_servers_and_search_engines/index.html
+++ b/files/en-us/learn/common_questions/pages_sites_servers_and_search_engines/index.html
@@ -54,7 +54,7 @@ tags:
 
 <ul>
  <li>The library is like a web server. It has several sections, which is similar to a web server hosting multiple websites.</li>
- <li>The different sections (science, math, history, etc.) in the library are like websites. Each section is like a unique website (two sections do not contain same books).</li>
+ <li>The different sections (science, math, history, etc.) in the library are like websites. Each section is like a unique website (two sections do not contain the same books).</li>
  <li>The books in each section are like webpages. One website may have several webpages, e.g., the Science section (the website) will have books on heat, sound, thermodynamics, statics, etc. (the webpages). Webpages can each be found at a unique location (URL).</li>
  <li>The search index is like the search engine. Each book has its own unique location in the library (two books cannot be kept at the same place) which is specified by the catalog number.</li>
 </ul>
