Topic tutorial linkage
Added link to Table tutorial from <table> element page - all on MDN

--- a/files/en-us/web/html/element/table/index.html
+++ b/files/en-us/web/html/element/table/index.html
@@ -672,6 +672,7 @@ tr:last-child td {
 <h2 id="See_also">See also</h2>
 
 <ul>
+  <li><a href="/en-US/docs/Learn/HTML/Tables">HTML data table tutorial</a></li>
  <li>CSS properties that may be especially useful to style the <code>&lt;table&gt;</code> element:
 
   <ul>
