--- a/files/en-us/web/svg/tutorial/other_content_in_svg/index.html
+++ b/files/en-us/web/svg/tutorial/other_content_in_svg/index.html
@@ -20,11 +20,11 @@ tags:
      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
      width="200" height="200"&gt;
   &lt;image x="90" y="-65" width="128" height="146" transform="rotate(45)"
-     xlink:href="https://developer.mozilla.org/static/img/favicon144.png"/&gt;
+     xlink:href="https://developer.mozilla.org/en-US/docs/Web/SVG/Element/image/mdn_logo_only_color.png"/&gt;
 &lt;/svg&gt;
 </pre>
 
-<p>{{ EmbedLiveSample('Embedding_raster_images','220','220','/files/16567/rotate-image-demo.png') }}</p>
+<p>{{ EmbedLiveSample('Embedding_raster_images','220','240') }}</p>
 
 <h3 id="Embedding_arbitrary_XML">Embedding arbitrary XML</h3>
 
