--- a/files/en-us/web/svg/tutorial/patterns/index.html
+++ b/files/en-us/web/svg/tutorial/patterns/index.html
@@ -33,7 +33,7 @@ tags:
   &lt;rect fill="url(#Pattern)" stroke="black" width="200" height="200"/&gt;
 &lt;/svg&gt;</pre>
 
-<p>{{ EmbedLiveSample('Patterns','220','220','/files/725/SVG_Pattern_Example.png') }}</p>
+<p>{{ EmbedLiveSample('Patterns','220','240') }}</p>
 
 <p>Inside the {{SVGElement("pattern")}} element, you can include any of the other basic shapes you've included before, and each of them can be styled using any of the styles you've learned before, including gradients and opacity. Here, we've just drawn two rectangle elements inside the pattern (which overlap, and one of which is twice the size of the other and is used to fill in the entire pattern), and one circle.</p>
 
