--- a/files/en-us/web/html/element/pre/index.html
+++ b/files/en-us/web/html/element/pre/index.html
@@ -78,7 +78,7 @@ body {
 
 <p>{{EmbedLiveSample("Example")}}</p>
 
-<div class="notecard note"><strong>Note:</strong> If you have HTML tags in the content you want to display literally, rather than parsed as HTML, you will need to encode the angle brackets. For example <code>&amp;lt;p&amp;gt;</code> to display <code>&lt;p&gt;</code>.</div>
+<div class="notecard note"><p><strong>Note:</strong> If you have HTML tags in the content you want to display literally, rather than parsed as HTML, you will need to encode the angle brackets. For example <code>&amp;lt;p&amp;gt;</code> to display <code>&lt;p&gt;</code>.</p></div>
 
 <h2 id="Accessibility_concerns">Accessibility concerns</h2>
 
