--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -34,7 +34,7 @@ tags:
 <h3 id="JavaScript">JavaScript</h3>
 
 <ul>
-  <li>The properties <code>imageOrientation</code> and <code>premultiplyAlpha</code> can be passed to the method {{domxref("createImageBitmap()")}} using the <code>options</code> object ({{bug(136725 1)}}).</li>
+  <li>The properties <code>imageOrientation</code> and <code>premultiplyAlpha</code> can be passed to the method {{domxref("createImageBitmap()")}} using the <code>options</code> object ({{bug(1367251)}}).</li>
 </ul>
 
 <h4 id="removals_js">Removals</h4>
